feat: enhance MirrorSourceTask with log truncation detection and topic reset recovery